Sun Jul 14 00:13:01 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/net/http/test_http.rb (TestNetHTTP_v1_2#test_get,
	  TestNetHTTP_v1_2_chunked#test_get): shouldn't check
	  HttpResponse#decode_content if Zlib is not available.
	  ko1 complained via IRC.

Sat Jul 13 23:50:00 2013  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c: fixed coding error [ruby-core:55337].
	  reported by Riley Lynch.

Sat Jul 13 23:50:00 2013  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c: fixed a bug [ruby-core:55295].  reported
	  by Riley Lynch.

Sat Jul 13 23:41:25 2013  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_parse.c (date_zone_to_diff): [ruby-core:55831].

Sat Jul 13 23:34:13 2013  Akinori MUSHA  <knu@iDaemons.org>

	* object.c: Fix rdoc for Kernel#<=>. [Fix GH-352]

Sat Jul 13 23:29:51 2013  Akinori MUSHA  <knu@iDaemons.org>

	* lib/fileutils.rb (FileUtils#mode_to_s): Define mode_to_s() also
	  as singleton method, or FileUtils.chmod fails in verbose mode.

Sat Jul 13 23:27:12 2013  Akinori MUSHA  <knu@iDaemons.org>

	* lib/fileutils.rb (FileUtils#chown, FileUtils#chown_R): If user
	  and group are both nil, print ":".

Sat Jul 13 23:16:49 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bigrsh_bang): Fix bignum digits overrun.

Sat Jul 13 23:16:49 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (biglsh_bang): Fix bignum digits under-run.

Sat Jul 13 22:45:10 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_DTRACE_POSTPROCESS): dtrace version SUN D 1.11
	  introduces a check in the dtrace compiler to ensure that probes
	  actually exist. If there are no probes, then the -G step will
	  fail. As this test is only being used to determine whether -G is
	  necessary (for instance, on OSX it is not), adding a real probe to
	  the conftest allows it to succeed on newer versions of dtrace.
	  Patch by Eric Saxby <sax AT livinginthepast.org> at
	  [ruby-core:55826].  [Fix GH-351], [Bug #8606].
